@@ -1,0 +1,5 @@
+<configure 
+  xmlns="http://namespaces.zope.org/zope"
+  xmlns:five="http://namespaces.zope.org/five">
+
+</configure>
