@@ -1,9 +1,42 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:i18n="http://namespaces.zope.org/i18n"
+    xmlns:five="http://namespaces.zope.org/five"
+    i18n_domain="silva"
     >
+
+  <!-- Silva permissions -->
+
+  <permission
+    id="silva.ReadSilvaContent"
+    title="Read Silva content"
+    />
+
+  <permission
+    id="silva.ChangeSilvaContent"
+    title="Change Silva content"
+    />
+
+  <permission
+    id="silva.ApproveSilvaContent"
+    title="Approve Silva content"
+    />
+
+  <permission
+    id="silva.ChangeSilvaAccess"
+    title="Change Silva access"
+    />
+
+  <!-- make things in Silva traversable -->
+
+  <five:traversable
+    class="Products.Silva.SilvaObject.SilvaObject"
+  />
 
   <!-- i18n -->
   <i18n:registerTranslations directory="i18n" />
+
+  <include package=".adapters" /> 
+  <include package=".browser" />
 
 </configure>
